deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: app-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: zekaa-academy
          image: youssefzekaa26/devops-academy:web
          ports:
            - containerPort: 80
